WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79685
[CSSRegions][CSSOM]Prevent creation of NamedFlow object for invalid flow name
https://bugs.webkit.org/show_bug.cgi?id=79685
Summary
[CSSRegions][CSSOM]Prevent creation of NamedFlow object for invalid flow name
Mihnea Ovidenie
Reported
2012-02-27 11:01:38 PST
http://dev.w3.org/csswg/css3-regions/#flow-into
" The values ‘none’, ‘inherit’, ‘default’, ‘auto’ and ‘initial’ are invalid flow names." Therefore, asking for a named flow object with such a name should return a null object.
Attachments
Patch
(4.48 KB, patch)
2012-02-27 12:03 PST
,
Mihnea Ovidenie
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch 2
(6.56 KB, patch)
2012-03-01 02:21 PST
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2012-02-27 12:03:21 PST
Created
attachment 129080
[details]
Patch
WebKit Review Bot
Comment 2
2012-02-27 13:40:18 PST
Comment on
attachment 129080
[details]
Patch
Attachment 129080
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/11643170
New failing tests: css3/filters/effect-invert-hw.html
Mihnea Ovidenie
Comment 3
2012-03-01 02:21:20 PST
Created
attachment 129669
[details]
Patch 2
Dave Hyatt
Comment 4
2012-03-05 13:39:30 PST
Comment on
attachment 129669
[details]
Patch 2 r=me
WebKit Review Bot
Comment 5
2012-03-05 15:32:08 PST
Comment on
attachment 129669
[details]
Patch 2 Clearing flags on attachment: 129669 Committed
r109807
: <
http://trac.webkit.org/changeset/109807
>
WebKit Review Bot
Comment 6
2012-03-05 15:32:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug