[CSSRegions][CSSOM]Prevent creation of NamedFlow object for invalid flow name https://bugs.webkit.org/show_bug.cgi?id=79685

Reviewed by David Hyatt.

Asking for a named flow with an invalid flow name should return a null object.

Source/WebCore:

Test: fast/regions/webkit-named-flow-invalid-name.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseFlowThread):
(WebCore):
* css/CSSParser.h:
* dom/Document.cpp:
(WebCore::validFlowName):
(WebCore):
(WebCore::Document::webkitGetFlowByName):

LayoutTests:

* fast/regions/webkit-named-flow-invalid-name-expected.txt: Added.
* fast/regions/webkit-named-flow-invalid-name.html: Added.


Canonical link: https://commits.webkit.org/97456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109807 268f45cc-cd09-0410-ab3c-d52691b4dbfc